--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,10 @@
   "require": {
     "monolog/monolog": "3.2.0"
   },
-  "autoload" : {
+  "name": "votre-nom/zoo",
+  "autoload": {
     "psr-4": {
-      "App\\": "app/"
+      "App\\":"src"
     }
   }
 }
